--- a/globalmem/Makefile
+++ b/globalmem/Makefile
@@ -5,7 +5,7 @@ obj-m += globalmem.o
 build: kernel_modules
 
 kernel_modules:
-	make -C \lib\modules\$(KVERS)\build M=$(CURDIR) modules
+	make -C /lib/modules/$(KVERS)/build M=$(CURDIR) modules
 
 clean:
-	make -C \Lib\modules\$(KVERS)\build M=$(CURDIR) clean
+	make -C /lib/modules/$(KVERS)/build M=$(CURDIR) clean
