--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
     "files.associations": {
         "init.h": "c",
         "stat.h": "c",
-        "errno.h": "c"
+        "errno.h": "c",
+        "wait.h": "c",
+        "poll.h": "c",
+        "libaio.h": "c"
     },
     "C_Cpp.default.intelliSenseMode": "msvc-x64"
 }
