--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "libaio.h": "c",
         "uaccess.h": "c",
         "scull.h": "c",
-        "semaphore.h": "c"
+        "semaphore.h": "c",
+        "proc_fs.h": "c"
     },
     "C_Cpp.default.intelliSenseMode": "gcc-x64"
 }
