--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,9 @@
         "uaccess.h": "c",
         "scull.h": "c",
         "semaphore.h": "c",
-        "proc_fs.h": "c"
+        "proc_fs.h": "c",
+        "fs.h": "c",
+        "ioctl.h": "c"
     },
     "C_Cpp.default.intelliSenseMode": "gcc-x64"
 }
