--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "semaphore.h": "c",
         "proc_fs.h": "c",
         "fs.h": "c",
-        "ioctl.h": "c"
+        "ioctl.h": "c",
+        "scullpipe.h": "c"
     },
     "C_Cpp.default.intelliSenseMode": "gcc-x64"
 }
