--- a/exercise/scullpip/Makefile
+++ b/exercise/scullpip/Makefile
@@ -9,7 +9,7 @@ EXTRA_CFLAGES += $(DEBUGFLAG)
 ifneq ($(KERNELRELEASE), )
 obj-m := scullpipe.o
 else
-KERNELRELEASE ?= /lib/modules/$(shell uname -r)/build
+KERNELRELEASE ?= /usr/src/linux-headers-$(shell uname -r)/
 SOURCEPATH := $(CURDIR)/
 
 modules:
