--- a/exercise/scull/Makefile
+++ b/exercise/scull/Makefile
@@ -13,7 +13,7 @@ obj-m := scull.o
 
 else
 
-KERNELDIR ?= /lib/modules/$(shell uname -r)/build
+KERNELDIR ?= /usr/src/linux-headers-$(shell uname -r)/
 PWD := $(CURDIR)
 
 modules:
