init_timer被移除，引入timer_setup，同时回调函数变化，timer结构体变换

--- a/exercise/jit/Makefile
+++ b/exercise/jit/Makefile
@@ -1,4 +1,4 @@
-KERNELRELEASE := /lib/modules/$(shell uname -r)/build
+KERNELRELEASE := /usr/src/linux-headers-$(shell uname -r)/
 SOURCEPATH = $(CURDIR)
 
 obj-m := jit.o
