scull_page debug finish

--- a/exercise/scull_page/Makefile
+++ b/exercise/scull_page/Makefile
@@ -1,6 +1,6 @@
 KERNEL_DIR = /usr/src/linux-headers-$(shell uname -r)/
 
-obj-m += scullp.
+obj-m += scullp.o
 
 build:
 	make -C $(KERNEL_DIR) M=$(CURDIR) modules
