--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,23 @@
 {
     "files.associations": {
-        "init.h": "c",
-        "stat.h": "c",
-        "errno.h": "c",
-        "wait.h": "c",
-        "poll.h": "c",
-        "libaio.h": "c",
-        "uaccess.h": "c",
-        "scull.h": "c",
-        "semaphore.h": "c",
-        "proc_fs.h": "c",
-        "fs.h": "c",
-        "ioctl.h": "c",
-        "scullpipe.h": "c",
-        "mm.h": "c",
-        "io.h": "c"
-    },
+		"init.h": "c",
+		"stat.h": "c",
+		"errno.h": "c",
+		"wait.h": "c",
+		"poll.h": "c",
+		"libaio.h": "c",
+		"uaccess.h": "c",
+		"scull.h": "c",
+		"semaphore.h": "c",
+		"proc_fs.h": "c",
+		"fs.h": "c",
+		"ioctl.h": "c",
+		"scullpipe.h": "c",
+		"mm.h": "c",
+		"io.h": "c",
+		"gpio-exynos4.h": "c",
+		"gpio.h": "c",
+		"gpio-cfg.h": "c"
+	},
     "C_Cpp.default.intelliSenseMode": "gcc-x64"
 }
